<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Announces.UploadFragment"
    android:layout_margin="15dp"
    android:scrollbars="none">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:background="@drawable/roundedcorner">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/backBtn"
                    android:padding="8dp"
                    android:src="@drawable/ic_backarrow"
                    android:background="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailOwner"
                    android:text="@string/uploadTitle"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"/>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_addimage"
                android:id="@+id/uploadImage" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/uploadTopic"
                android:background="@drawable/roundedcorner"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/uploadInsertTitle"
                android:gravity="start|center_vertical"
                android:textColor="@color/orange"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/uploadNumber"
                android:inputType="phone"
                android:background="@drawable/roundedcorner"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/uploadInsertNumber"
                android:gravity="start|center_vertical"
                android:textColor="@color/orange"/>

            <EditText
                android:id="@+id/uploadDest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedcorner"
                android:gravity="start|center_vertical"
                android:hint="@string/uploadInsertDestination"
                android:padding="16dp"
                android:textColor="@color/orange" />

            <EditText
                android:id="@+id/uploadStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedcorner"
                android:gravity="start|center_vertical"
                android:hint="@string/uploadInsertStart"
                android:padding="16dp"
                android:textColor="@color/orange" />

            <Switch
                android:id="@+id/FeeSwitch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedcorner"
                android:checked="false"
                android:drawableLeft="@drawable/ic_money"
                android:gravity="left"
                android:padding="15sp"
                android:text="Need to be paid?"
                android:layout_marginTop="20dp"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/uploadDesc"
                android:background="@drawable/roundedcorner"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/uploadInsertDescription"
                android:gravity="start|center_vertical"
                android:textColor="@color/orange"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/uploadSaveButton"
                android:id="@+id/uploadSaveBtn"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedcorner"
                android:backgroundTint="@color/orange"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>